# ase-rs

./: Cargo.toml  LICENSE  README.md
sample_aseprite_files/: animated.aseprite  layered.aseprite  sliced.aseprite
src/: chunk.rs  color.rs  frame.rs  header.rs  helpers.rs  lib.rs
src/chunk/: cel_chunk.rs  cel_extra_chunk.rs  color_profile_chunk.rs  frame_tags_chunk.rs  layer_chunk.rs  mask_chunk.rs  old_palette_chunk11.rs  old_palette_chunk4.rs  palette_chunk.rs  path_chunk.rs  slice_chunk.rs  user_data_chunk.rs
tests/: tests.rs
