[package]
name = "ase"
version = "0.1.3"
authors = ["Matheus Lessa <matheus@fastmail.com>"]
edition = "2018"
description = "Rust library to parse Aseprite *.aseprite files"
keywords = ["ase", "Aseprite", "Pixel"]
license = "MIT"
documentation = "https://docs.rs/https://docs.rs/ase"
homepage = "https://github.com/matheuslessarodrigues/ase-rs"
repository = "https://github.com/matheuslessarodrigues/ase-rs"

[dependencies]
byteorder = "1"
bitflags = "1.0"
num_enum = "0.1.1"

[[bin]]
name = "print_ase"
path = "bin/read.rs"